Preventing hero img from overflowing

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav a {
     rgb(235, 159, 28),
     rgb(223, 11, 15) 45%
   );
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
 }
@@ -112,12 +112,14 @@ nav {
   display: flex;
   align-items: center;
   gap: 100px;
-  height: 70vh;
+  min-height: 70vh;
 }
 
 .hero img {
   box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+  width: 100%;
+  height: 100%;
 }
 
 .product {
@@ -216,7 +218,7 @@ nav {
 .quotes {
   padding: 65px 7% 65px;
   background-color: #e6e6e6;
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .quotes h1 {
